see that file and the SVN log for more historic information.  The
entire history of the project is available through SVN.

----------------------------------------------------------------------
--- 2007-11-XX  Release 7.11.0                                     ---
----------------------------------------------------------------------

* tree -d option in MGED for limiting tree display depth - Cliff Yapp
* added mouse color query support to OpenGL framebuffer - Bob Parker
* fixed X11 framebuffer colormapping bug - Bob Parker 
* libpng updated to 1.2.25 - Erik Greenwald
* fixed several mged I/O bugs for stdin/stdout/stderr - Bob Parker
* nirt now uses bounding sphere for -b backout option - Erik Greenwald
* document the signals rt responds to for progress - Sean Morrison
* libpng updated to 1.2.24 - Erik Greenwald
* TCL/TK updated to 8.5.1 - Erik Greenwald
* MGED now runs in the foreground by default - Erik Greenwald
* fixed g-dxf bug where incorrect object name is assigned - Bob Parker
* fixed browser-based mged help on Mac OS X - Sean Morrison
* added rest of BRL-CAD's geometry converters for Windows - Bob Parker
* added more missing framebuffer tools to Windows port - Bob Parker
* rtwizard enhancments for ghosting and display - Bob Parker
* mged reports failure if ray-tracer returns non-zero - Sean Morrison
* improved mged corrupt geometry file handling - Sean Morrison
* improved dbconcat object suffix and prefix options - Sean Morrison
* Tcl/Tk updated to 8.5 final from 8.5b1 - Erik Greenwald
* fixed PIX image file creation bug on Windows - Bob Parker
* ported rtwizard to function properly on Windows - Bob Parker
* fixed mged text-editing commands on Windows platform - Bob Parker
* removed duplicate points text-editing ARBs in mged - John Anderson
* improved mged ted line-ending support using wordpad - Bob Parker
* fixed g_diff bug where some differences were missed - John Anderson
* fixed bug evaluating metaball normals - Erik Greenwald, Ed Davisson